Bug 14518 - Kernel panic when moving mouse over window with indirect rendering
Summary: Kernel panic when moving mouse over window with indirect rendering
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/other (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-02-15 21:10 UTC by Joel Bosveld
Modified: 2008-02-26 03:27 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
xorg.0.log (433.67 KB, text/plain)
2008-02-15 21:11 UTC, Joel Bosveld
no flags Details
/var/log/dmesg (17.27 KB, text/plain)
2008-02-15 21:12 UTC, Joel Bosveld
no flags Details
dmesg > dmesg.log (238.78 KB, text/plain)
2008-02-15 21:12 UTC, Joel Bosveld
no flags Details
/var/log/everything/current (I think it is from metalog) (385.73 KB, text/plain)
2008-02-15 21:13 UTC, Joel Bosveld
no flags Details
bt from crash after disabling aiglx and running compiz and a window decorator (4.89 KB, text/plain)
2008-02-15 22:25 UTC, Joel Bosveld
no flags Details

Description Joel Bosveld 2008-02-15 21:10:11 UTC
I just compiled master/mpx versions of X and Mesa. When running glxgears with direct rendering, all works fine. However if I run it with LIBGL_ALWAYS_INDIRECT=1 it will work fine until I move my mouse over the window, which causes a kernel panic.

When I try start compiz (which needs indirect rendering to get glx_tex_from_pixmap) I also get a kernel panic.

This is on gentoo, with linux-2.6.23-gentoo-r8 kernel. I have attached /var/log/dmesg, /var/log/everything/current (from metalog, I believe), Xorg.0.log, and "dmesg > dmesg.log" (with drm modules loaded with debug=1)

Thanks, Joel
Comment 1 Joel Bosveld 2008-02-15 21:11:45 UTC
Created attachment 14340 [details]
xorg.0.log
Comment 2 Joel Bosveld 2008-02-15 21:12:08 UTC
Created attachment 14341 [details]
/var/log/dmesg
Comment 3 Joel Bosveld 2008-02-15 21:12:42 UTC
Created attachment 14342 [details]
dmesg > dmesg.log
Comment 4 Joel Bosveld 2008-02-15 21:13:44 UTC
Created attachment 14343 [details]
/var/log/everything/current (I think it is from metalog)
Comment 5 Joel Bosveld 2008-02-15 22:25:22 UTC
When I disable AIGLX, I no longer get kernel panic when mouseover on glxgears with indirect rendering. I also can run compiz (although it does run rather slowly), but the windows are missing there textures (they just appear white), and if I move a window the screen doesn't get updated until I rotate the cube (the white rectangle suddenly jumps)

Also, when I try start the window decorator for compiz (gtk-window-decorator --replace) it crashes X (I have attached a backtrace incase that helps solve the original problem, which may be related?)
Comment 6 Joel Bosveld 2008-02-15 22:25:58 UTC
Created attachment 14344 [details]
bt from crash after disabling aiglx and running compiz and a window decorator
Comment 7 Benjamin Close 2008-02-18 04:51:34 UTC
Do you get the crash if you use the master version of xorg or only the MPX version?
Comment 8 Joel Bosveld 2008-02-19 01:08:51 UTC
I recompiled proto, libs, server and drivers with master instead of mpx branches, and the problem remains.
Comment 9 Michel Dänzer 2008-02-19 02:00:07 UTC
How do you know it's a kernel panic? Can you provide the actual panic output?

The compiz issues with AIGLX disabled are expected - the software rendering code hasn't been fleshed out as it wouldn't be usable in practice anyway.

The crash from comment #6 may be fixed in pixman Git.
Comment 10 Michel Dänzer 2008-02-19 02:09:34 UTC
BTW, does it also happen if you disable silken mouse or with Option "SWCursor"?
Comment 11 Joel Bosveld 2008-02-19 02:21:49 UTC
If I disable software cursor (Option "SWCursor" "off") the problem disappears.

(only problem is that this is now with master instead of mpx, and I believe that you need to use software cursors in mpx)

As for the KP, the caps lock and scroll lock leds flash, and I can't get any output (at least, not in any way that I know of)

Thanks, Joel
Comment 12 Peter Hutterer 2008-02-19 02:49:14 UTC
(In reply to comment #11)
> If I disable software cursor (Option "SWCursor" "off") the problem disappears.
> 
> (only problem is that this is now with master instead of mpx, and I believe
> that you need to use software cursors in mpx)

yes. mpx has a return false somewhere where the HW cursor would be initialised (can't remember the actual functionname ATM). So even without the SWCursor option, it will force software rendering.
Comment 13 Joel Bosveld 2008-02-20 04:06:52 UTC
Is there any way I can get more log files (such as kernel panic output?) in order to make finding the source of the problem easier?

Comment 14 Joel Bosveld 2008-02-20 04:32:23 UTC
After loading drm module with debug=1 there is one extra entry in /var/log/messages, which is the last thing before kernel panic:

".... kernel: <7drm_unlocked_ioctl] ret = -22"
Comment 15 Michel Dänzer 2008-02-26 03:27:26 UTC
Fixed in http://cgit.freedesktop.org/xorg/xserver/commit/?id=dcc077c753137f37aa58231f1df3c4adb92b2c4b

Although, the kernel panic might indicate other bugs in the radeon DRM...


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.