AIGLX: Switch to server context for calling DamageDamageRegion().

Fixes https://bugs.freedesktop.org/show_bug.cgi?id=14518 .